Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.

Version 2.6-Beta 1
  FEATURES:
    * Ability to move track position bookmarks by dragging; patch by
      Jasneet Bhatti. (BR 214721)
    * Amarok can now remember whether and how to transcode tracks when
      transferring them to a particular collection. (BR 264681)
    * "Crop playlist" functionality implemented using drag & drop. (BR 267729, 211811)
    * Added keyboard shortcut for "Edit Track Information..." (BR 173814)
      Patch by Jasneet Bhatti.
    * Support for embedded album covers in non-collection tracks and
      in USB Mass Storage collection.
    * Hold the Shift key when dragging tracks to collections to move them
      instead of copying.
    * New search filter for absolute date
    * Named UMS collections
    * Albums with same name but different album artist are now correctly
      separated in USB Mass Storage, iPod and various online service collections.
    * Support for detecting compilations in USB Mass Storage collection.
    * Support embedded covers for ogg (read only) and flac files. (BR 288752)
    * Track meta-data can be edited in USB Mass Storage collection.
    * Support for album artists in USB Mass Storage collection.
    * album artist (if differs from artist), BPM, labels, last played time and
      bitrate are now shown in playlist track tooltip (if not already displayed
      in playlist)
    * Volume normalization: ReplayGain is now converted to iPod Sound Check and
      vice versa. (BR 142579)

  CHANGES:
    * Load tracks in playlists asynchronously using proxy tracks. (BR 295199)
    * It is now possible to transcode tracks when moving them. (BR 280526)
    * Drag & drop of tracks and playlists to Saved Playlists works in all cases.
    * Don't show unmounted USB Mass Storage devices and make it clear when
      the device is not "activated" yet.
    * "Devices" in Amarok configuration -> Plugins is with other related strings